tests/samples/invalid/size_of_slice.pn
const SIZE_OF_SLICE: usize = |:[]u8|;
